Restore scrollViewer position feature was added

--- a/ChatClient/ChatClient.csproj
+++ b/ChatClient/ChatClient.csproj
@@ -24,6 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ChatServer\ChatServer.csproj" />
     <ProjectReference Include="..\SharedItems\SharedItems.csproj" />
   </ItemGroup>
 
